src/styles/_OverLay.scss
.sg-overlay-wrapper {
    max-width: 100%; 
    max-height: 100%;
    z-index: $zindex-popover;
}

.sg-overlay-arrow {
    --width: 15px;
    --height: 20px;
    //points="1,6 1,16, 13,15.5, 13,20, 29,10, 13,1 13,6" 
    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 15 20"> <polygon points="1,1 1,19, 14,10" fill="#{$sg-arrow-fill}" stroke-width="1.5" stroke="#{$sg-arrow-border}" /> </svg>');
    background-repeat: no-repeat no-repeat;
    background-position: center center;
    background-size: cover;
    height: var(--height);
    width: var(--width);
    z-index: calc( $zindex-popover);
    &.overlay-position-right {
        transform: rotate(180deg);
    }
    &.overlay-position-left {
        transform: rotate(0deg);
    }
    &.overlay-position-top {
        transform: rotate(90deg);
    }
    &.overlay-position-bottom {
        transform: rotate(270deg);
    }
}
.sg-tooltip-arrow {
    --_brightness-filter: #{$tooltip-arrow-filter};
    --width: 10px;
    --height: 20px;
    background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 10 20"> <polygon points="1,1 1,19, 9,10" fill="#{$sg-arrow-fill}" stroke-width="2" stroke="#{$sg-arrow-fill}" /><polyline points="0,0 9,10 0,20" fill="none" stroke-width="2" stroke="#{$sg-arrow-border}" /> </svg>');
    //filter: brightness(66.666666%);
}

.sg-tooltip-wrapper {
    --_text-color: #{$tooltip-text-color};
    --_background-color: #{$tooltip-background-color};
    --_font-size: #{$tooltip-font-size};
    --_max-width: #{$tooltip-max-width};
    --_padding-x: #{$tooltip-padding-x};
    --_padding-y: #{$tooltip-padding-y};
    --_border-radius: calc #{$tooltip-border-radius};
    --_border-width: #{$tooltip-border-width};
    --_border-style: #{$tooltip-border-style};
    --_border-color: #{$tooltip-border-color};

    font-size: var(--_font-size);

    display: flex;
    flex-wrap: wrap;
    max-width: 12rem;
    padding: var(--_padding-x) var(--_padding-y);
    color: var(--_text-color);
    background-color: var(--_background-color);
    border: var(--_border-width) var(--_border-style) var(--_border-color);
    //appearance: none;
    border-radius: #{--_border-radius};
}

//<svg width="40" height="24" xmlns="http://www.w3.org/2000/svg"> <defs> <marker id="arrowhead" markerWidth="2" markerHeight="4" refX="0" refY="2" orient="auto"><polygon points="0 1, 1.8 2, 0 3" /></marker></defs> <line x1="0" y1="12" x2="25" y2="12" style="fill:rgb(0,0,255);stroke-width:8;stroke:rgb(0,0,0)" marker-end="url(#arrowhead)"/> </svg>

